--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,21 @@
+spring.datasource.url=jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.username=${PROD_DB_USERNAME}
+spring.datasource.password=${PROD_DB_PASSWORD}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.name=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/little
-spring.datasource.username=postgres
-spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=always
+
+spring.jpa.defer-datasource-initialization=true
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=addafaidn184@gmail.com
+spring.mail.port=587
+spring.mail.password=ndqrxgghfuzlkouf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
 
