--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.username=${PROD_DB_USERNAME}
-spring.datasource.password=${PROD_DB_PASSWORD}
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+server.port=8081
+spring.datasource.name=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.username=postgres
+spring.datasource.password=1234
 
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 
